--- a/saas-backend/tsconfig.json
+++ b/saas-backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
+    "rootDir": "saas-backend/src",
     "outDir": "./dist",
 
     // Environment Settings
